Styled app a bit. Working on modal.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-calender-view></app-calender-view>
+<!-- just for demo -->
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">Immo Terminkalender</span>
+    </div>
+</nav>
+<div class="wrapper">
+    <app-calender-view></app-calender-view>
+</div>
