--- a/src/app/calendar-utils/calendar-header.component.html
+++ b/src/app/calendar-utils/calendar-header.component.html
@@ -1,41 +1,28 @@
-<div class="row"> <!-- text-center-->
-    
+<div class="container">
+  <div class="row">
+
     <div class="col-md-8">
       <h5>{{ viewDate | calendarDate: view + 'ViewTitle':locale }}</h5>
     </div>
     <div class="col-md-4" style="text-align: right;">
       <div class="btn-group">
-        <div
-          class="btn btn-primary"
-          mwlCalendarPreviousView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="viewDateChange.next(viewDate)"
-        >
-        <i class="bi-caret-left" style="color: cornflowerblue;"></i>
+        <div class="btn btn-outline-primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
+          (viewDateChange)="viewDateChange.next(viewDate)" style="border-color: #ccc;">
+          <i class="bi-caret-left" style="color: cornflowerblue;"></i>
 
         </div>
-        <div
-          class="btn btn-outline-secondary"
-          mwlCalendarToday
-          [(viewDate)]="viewDate"
-          (viewDateChange)="viewDateChange.next(viewDate)"
-        >
-        <i class="bi-clock" style="color: cornflowerblue;"></i>
+        <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate"
+          (viewDateChange)="viewDateChange.next(viewDate)" style="border-color: #ccc;">
+          <i class="bi-clock" style="color: cornflowerblue;"></i>
 
         </div>
-        <div
-          class="btn btn-primary"
-          mwlCalendarNextView
-          [view]="view"
-          [(viewDate)]="viewDate"
-          (viewDateChange)="viewDateChange.next(viewDate)"
-        >
-        <i class="bi-caret-right" style="color: cornflowerblue;"></i>
-        
+        <div class="btn btn-outline-primary" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
+          (viewDateChange)="viewDateChange.next(viewDate)" style="border-color: #ccc;">
+          <i class="bi-caret-right" style="color: cornflowerblue;"></i>
+
         </div>
       </div>
     </div>
-    
+
   </div>
-  <br />
+</div>
