--- a/src/app/calender-view/calender-view.component.scss
+++ b/src/app/calender-view/calender-view.component.scss
@@ -6,3 +6,29 @@ pre {
     background-color: #f5f5f5;
     padding: 15px;
 }
+
+.close, .close:focus, .close:active {
+  border: none !important;
+  background: none;
+}
+
+.cal-current-time-marker {
+    height: 3px;
+    background: linear-gradient(270deg, #ec268d, #1f55dd);
+    background-size: 400% 400%;
+    animation: background-fade 5s ease infinite;
+  
+    @keyframes background-fade {
+      0% {
+        background-position: 0 50%;
+      }
+  
+      50% {
+        background-position: 100% 50%;
+      }
+  
+      100% {
+        background-position: 0 50%;
+      }
+    }
+  }
