--- a/src/app/calender-view/_components/month-view/month-view.component.html
+++ b/src/app/calender-view/_components/month-view/month-view.component.html
@@ -1,21 +1,51 @@
 <app-calendar-header [(view)]="view" [(viewDate)]="viewDate">
 </app-calendar-header>
-<mwl-calendar-month-view [viewDate]="viewDate" [events]="events" [cellTemplate]="cellTemplate" (dayClicked)="viewDateChange.next($event.day.date)">
+
+<mwl-calendar-month-view #monthCalender [viewDate]="viewDate" [events]="events" [cellTemplate]="cellTemplate"
+  [headerTemplate]="headerTemplate"
+  (dayClicked)="viewDateChange.next($event.day.date); dayClicked($event.day)"
+  (beforeViewRender)="beforeMonthViewRender($event)">
 </mwl-calendar-month-view>
 
-<div *ngIf="loading$ | async"><h1>TEST</h1></div>
+<div *ngIf="loading$ | async" class="d-flex justify-content-center centered">
+  <div class="spinner-grow text-success" role="status">
+    <!-- <span class="sr-only">Loading...</span> -->
+  </div>
+</div>
 
-<!-- custom tpl for month view -->
+<!-- custom header tpl -->
+<ng-template
+      #headerTemplate
+      let-days="days"
+      let-locale="locale"
+      let-trackByWeekDayHeaderDate="trackByWeekDayHeaderDate"
+    >
+      <div class="cal-cell-row cal-header" role="row">
+        <div
+          class="cal-cell"
+          *ngFor="let day of days; trackBy: trackByWeekDayHeaderDate"
+          [class.cal-past]="day.isPast"
+          [class.cal-today]="day.isToday"
+          [class.cal-future]="day.isFuture"
+          [class.cal-weekend]="day.isWeekend"
+         
+          [ngClass]="day.cssClass"
+          tabindex="0"
+          role="columnheader"
+        >
+  
+          {{ dayNames[day.date.getDay()] }}
+  
+        </div>
+      </div>
+    </ng-template>
+
+<!-- custom cell tpl -->
 <ng-template #cellTemplate let-day="day" let-locale="locale">
-    <div class="cal-cell-top">
-      <!-- <span class="cal-day-badge" *ngIf="day.badgeTotal > 0"
-        >{{ day.badgeTotal }}</span
-      > -->
-      <span class="cal-day-number"
-        >{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span
-      >
-    </div>
-    <!-- <small style="margin: 5px"
-      >There are {{ day.events.length }} events on this day</small
-    > -->
-  </ng-template>
+  <div class="cal-cell-top">
+
+    <span class="cal-day-number">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
+
+    <span class="cal-day-badge" *ngIf="day.badgeTotal > 0"></span>
+  </div>
+</ng-template>
