--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,68 +3,37 @@
 
 @import "../node_modules/angular-calendar/scss/angular-calendar.scss";
 
-@import  "../node_modules/angular-calendar/scss/variables.scss";
-
-.dark-theme {
-  // First define some global color variables for your app, these are just for the demo, they can be anything you like
-  $bg-dark-primary: #1f262d;
-  $bg-dark-secondary: #394046;
-  $bg-active: #2c343a;
-  $text-color: #d5d6d7;
-  $border-color: rgb(0 0 0 / 60%);
-
-  // Call the calendar mixin with a sass color map of your theme. Every property is optional.
-  // For a list of all variables and how they are used,
-  // see https://github.com/mattlewis92/angular-calendar/tree/main/projects/angular-calendar/src/variables.scss
-  @include cal-theme(
-    (
-      bg-primary: $bg-dark-primary,
-      bg-secondary: $bg-dark-secondary,
-      weekend-color: indianred,
-      bg-active: $bg-active,
-      border-color: $border-color,
-      gray: $bg-dark-secondary,
-      today-bg: $bg-dark-secondary,
-      event-color-primary: $bg-dark-secondary,
-    )
-  );
-
-  // How to override a non themable property, this was copied from chrome -> inspect element -> styles panel
-  .cal-month-view .cal-day-cell.cal-out-month .cal-day-number {
-    opacity: 0.15;
-  }
-
-  // Everything else below is just themes the demo, it's probably not relevant to your app
-  background-color: $bg-dark-primary;
-  color: $text-color;
-
-  .card {
-    border-color: $border-color;
-  }
-
-  .card-header {
-    background-color: $bg-dark-secondary;
-  }
-
-  .card-body {
-    background-color: $bg-dark-primary;
-  }
-
-  .nav-tabs {
-    border-bottom-color: $border-color;
-  }
-
-  .nav-tabs .nav-link.active {
-    background-color: $bg-dark-primary;
-    color: $text-color;
-    border-color: $border-color;
-  }
-
-  .nav-tabs .nav-link:hover,
-  .nav-tabs .nav-link:focus {
-    border-color: $border-color;
-  }
+.wrapper {
+  margin-top: 20px;
+  margin-bottom: 20px; 
 }
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+// month calendar styles
+.cal-month-view .cal-day-cell.cal-today .cal-day-number  {
+  font-size: 1.2em !important;
+}
+
+.cal-day-selected {
+  background-color: #cccccc !important;
+}
+
+.cal-cell-top {
+  max-height: 50px !important;
+  min-height: 50px !important;
+  height: 50px !important;
+}
+
+.cal-month-view .cal-day-cell {
+  min-height: 50px !important;
+}
+
+.cal-day-badge {
+  width: 10px;
+  height: 10px;
+  opacity: 0.7;
+}
+
+.cal-month-view .cal-day-number {
+  float: none !important;
+  margin-right: 0px !important;
+}
