Added scroll to week calendar view.

--- a/src/app/calender-view/calender-view.component.html
+++ b/src/app/calender-view/calender-view.component.html
@@ -15,10 +15,12 @@
       <app-calendar-header [(view)]="view" [(viewDate)]="viewDate" [displayNowBtn]="true">
       </app-calendar-header>
 
-      <mwl-calendar-week-view [viewDate]="viewDate" [events]="(appointments$ | async)!"
-        [headerTemplate]="headerTemplate" [eventTemplate]="eventTemplate" [dayStartHour]="8" [dayEndHour]="20"
-        [currentTimeMarkerTemplate]="currentTimeMarkerTemplate">
-      </mwl-calendar-week-view>
+      <div class="scroll-view">
+        <mwl-calendar-week-view [viewDate]="viewDate" [events]="(appointments$ | async)!"
+          [headerTemplate]="headerTemplate" [eventTemplate]="eventTemplate" [dayStartHour]="8" [dayEndHour]="20"
+          [currentTimeMarkerTemplate]="currentTimeMarkerTemplate">
+        </mwl-calendar-week-view>
+      </div>
 
     </div>
   </div>
@@ -144,7 +146,6 @@
           </div>
         </div>
       </div>
-
 
     </div>
   </ng-container>
