--- a/src/app/calender-view/calender-view.component.scss
+++ b/src/app/calender-view/calender-view.component.scss
@@ -7,6 +7,12 @@ pre {
     padding: 15px;
 }
 
+.scroll-view {
+  height: calc(100vh - 188px);
+  overflow: scroll;
+  border-bottom: #ddd solid 1px;
+}
+
 // appointment modal
 .close, .close:focus, .close:active {
   border: none !important;
