--- a/src/app/calender-view/calender-view.component.scss
+++ b/src/app/calender-view/calender-view.component.scss
@@ -1,20 +1,16 @@
 h3 {
-    margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 pre {
-    background-color: #f5f5f5;
-    padding: 15px;
-}
-
-.scroll-view {
-  height: calc(100vh - 188px);
-  overflow: scroll;
-  border-bottom: #ddd solid 1px;
+  background-color: #f5f5f5;
+  padding: 15px;
 }
 
 // appointment modal
-.close, .close:focus, .close:active {
+.close,
+.close:focus,
+.close:active {
   border: none !important;
   background: none;
 }
@@ -47,23 +43,22 @@ pre {
 }
 
 .cal-current-time-marker {
-    height: 3px;
-    background: linear-gradient(270deg, #ec268d, #1f55dd);
-    background-size: 400% 400%;
-    animation: background-fade 5s ease infinite;
-  
-    @keyframes background-fade {
-      0% {
-        background-position: 0 50%;
-      }
-  
-      50% {
-        background-position: 100% 50%;
-      }
-  
-      100% {
-        background-position: 0 50%;
-      }
+  height: 3px;
+  background: linear-gradient(270deg, #ec268d, #1f55dd);
+  background-size: 400% 400%;
+  animation: background-fade 5s ease infinite;
+
+  @keyframes background-fade {
+    0% {
+      background-position: 0 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0 50%;
     }
   }
-  
+}
