Added task description to readme.

--- a/src/app/calender-view/calender-view.component.html
+++ b/src/app/calender-view/calender-view.component.html
@@ -82,7 +82,7 @@
         <!--
           appointment.meta.firstElement/lastElement was introduced to provide
           cappabilies to hide the buttons if no more appointments to come.
-          First that was programmed to cycle (and is but has no effect since buttons
+          First that was programmed to cycle (and is still but has no effect since buttons
           are hidden)
         -->
 
